--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
-    "discord.js": "^13.5.0"
+    "discord.js": "^13.5.0",
+    "turndown": "^7.1.1"
   },
   "devDependencies": {
+    "@types/turndown": "^5.0.1",
     "typescript": "^4.5.4"
   }
 }
