--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "typeRoots": ["node_modules/@types"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "module": "CommonJS",
