--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
+    "discord-api-types": "^0.26.1",
     "discord.js": "^13.5.0",
     "turndown": "^7.1.1"
   },
