--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
   "name": "lwsd-alerts",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
-  "main": "out/src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "build": "rm -rf out && tsc"
+    "build": "tsup",
+    "dev": "tsup --watch --silent --onSuccess=\"echo \\\"restart\n\\\"\nnode .\""
   },
   "author": "Harry Allen",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/builders": "^0.11.0",
-    "@discordjs/rest": "^0.2.0-canary.0",
-    "axios": "^0.24.0",
-    "cheerio": "^1.0.0-rc.10",
-    "discord-api-types": "^0.26.1",
-    "discord.js": "^13.5.0",
+    "@sapphire/discord.js-utilities": "5.1.0-pr-434.9fcf7df.0",
+    "cheerio": "1.0.0-rc.12",
+    "discord.js": "^14.7.1",
     "turndown": "^7.1.1"
   },
   "devDependencies": {
+    "@types/node": "^18.11.10",
     "@types/turndown": "^5.0.1",
-    "typescript": "^4.5.4"
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.3"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "cheerio@1.0.0-rc.12": "patches/cheerio@1.0.0-rc.12.patch"
+    }
   }
 }
