--- a/package.json
+++ b/package.json
@@ -6,31 +6,29 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsup",
-    "dev": "tsup --watch --silent --onSuccess=\"echo \\\"restart\n\\\"\nnode .\""
+    "dev": "tsup --watch --silent --onSuccess=\"echo \\\"restart\n\\\"\nnode .\"",
+    "lint": "eslint ."
   },
   "author": "Harry Allen",
   "license": "MIT",
   "dependencies": {
-    "@sapphire/discord.js-utilities": "5.2.0-pr-434.3d4d96b.0",
-    "cheerio": "1.0.0-rc.12",
+    "@sapphire/discord.js-utilities": "7.3.1",
+    "cheerio": "1.0.0",
+    "dequal": "^2.0.3",
     "discord.js": "^14.7.1",
-    "lodash.isequal": "^4.5.0",
     "turndown": "^7.1.1"
   },
   "devDependencies": {
-    "@types/lodash.isequal": "^4.5.6",
-    "@types/node": "^18.11.18",
+    "@eslint/js": "^9.15.0",
+    "@types/node": "^22.9.1",
     "@types/turndown": "^5.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.5.0",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.4"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "cheerio@1.0.0-rc.12": "patches/cheerio@1.0.0-rc.12.patch"
-    }
+    "eslint": "^9.15.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-unicorn": "^56.0.1",
+    "globals": "^15.12.0",
+    "prettier": "^3.3.3",
+    "tsup": "^8.3.5",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.15.0"
   }
 }
